--- a/module_1/package.json
+++ b/module_1/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "lodash": "~4.17.4",
     "react": "~16.0.0",
-    "react-dom": "~16.0.0"
+    "react-dom": "~16.0.0",
+    "react-dom-factories": "~1.0.2",
+    "prop-types": "~15.6.0"
   },
   "devDependencies": {
     "babel-register": "~6.26.0",
