--- a/module_1/package.json
+++ b/module_1/package.json
@@ -13,7 +13,8 @@
     "react": "~16.0.0",
     "react-dom": "~16.0.0",
     "react-dom-factories": "~1.0.2",
-    "prop-types": "~15.6.0"
+    "prop-types": "~15.6.0",
+    "express": "~4.16.2"
   },
   "devDependencies": {
     "babel-register": "~6.26.0",
